# AuditLens

./: .gitignore  AGENT.MD  ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT.md  README.md  bias_audit_mvp_plan.html  pyproject.toml  pytest.ini  requirements.txt  run-dev.sh
.github/workflows/: ci.yml  publish-pypi.yml
backend/: main.py
backend/layer1/: class_distribution.py  missing_values.py  severity_scorer.py  subgroup_analysis.py
backend/layer2/: agent.py  schema.py  state.py
backend/layer2/llm/: base.py  factory.py  groq_client.py  openai_client.py
backend/layer2/nodes/: analyze.py  clarify.py  interpret.py  parse.py  recommend.py  report.py
backend/layer2/prompts/: analyze_prompt.py  interpret_prompt.py  recommend_prompt.py
backend/layer3/: __init__.py  report_generator.py  visualizations.py
backend/routers/: audit.py
backend/utils/: config.py  schema.py
docs/: README.md  main-idea.md  next-phase-roadmap.md  ui-plan.md
docs/internal/: README.md  bias_audit_mvp_plan.md
docs/internal/layer2/: phase-1-foundation.md  phase-2-task-context.md  phase-4-mitigations.md
docs/internal/layer3/: phase-2-pdf-and-charts.md
docs/layer2/: phase-3-interpretation.md  phase-5-integration.md  phase-6-stabilization.md
docs/layer3/: phase-1-report-delivery.md
examples/: custom_llm_client.py  notebook_quickstart.ipynb
frontend/: api_client.py  charts.py  constants.py  downloads.py  header.py  risk_findings.py  sidebar.py  state.py  ui.py  workflow.py
server/auditlens_server/: __init__.py  app.py
server/auditlens_server/routers/: audit.py
src/auditlens/: __init__.py  api.py  config.py  exceptions.py
src/auditlens/core/: __init__.py  audit.py  schema.py  severity.py
src/auditlens/core/analyzers/: __init__.py  class_distribution.py  correlations.py  missing_values.py  subgroup_analysis.py
src/auditlens/interpretation/: __init__.py  errors.py  graph.py  pipeline.py  schema.py
src/auditlens/interpretation/llm/: __init__.py  factory.py
src/auditlens/interpretation/llm/providers/: groq.py  openai.py  openrouter.py
src/auditlens/interpretation/nodes/: __init__.py  analyze.py  clarify.py  common.py  interpret.py  parse.py  recommend.py  report.py
src/auditlens/interpretation/prompts/: __init__.py
src/auditlens/reporting/: __init__.py  artifacts.py  generator.py  jobs.py  visualizations.py
tests/: conftest.py  test_adult_income_smoke.py  test_layer2_foundation.py  test_layer2_pipeline.py  test_layer3.py
tests/core/: test_layer1.py  test_public_api.py
tests/e2e/: __init__.py  conftest.py  test_playwright_server.py
tests/integration/: __init__.py  test_hard_pipeline.py
tests/interpretation/: test_layer2_foundation.py  test_layer2_pipeline.py
tests/reporting/: test_layer3.py
tests/server/: test_api.py
tests/smoke/: test_adult_income_smoke.py
ui/auditlens_ui/: __init__.py  api_client.py  app.py  charts.py  clarification.py  downloads.py  risk_findings.py  sidebar.py  state.py  styles.py  ui.py  workflow.py
