[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auditlens"
version = "0.1.0"
description = "Bias and fairness auditing for tabular ML datasets"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "AuditLens contributors" }]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "pydantic>=2.0",
]

[project.optional-dependencies]
openai = [
    "langgraph>=0.2",
    "langchain>=0.2",
    "langchain-openai>=0.2",
    "openai>=1.0",
]
groq = [
    "langgraph>=0.2",
    "langchain>=0.2",
    "langchain-openai>=0.2",
    "openai>=1.0",
]
openrouter = [
    "langgraph>=0.2",
    "langchain>=0.2",
    "langchain-openai>=0.2",
    "openai>=1.0",
]
pdf = ["reportlab>=4.0", "matplotlib>=3.7"]
viz = ["matplotlib>=3.7"]
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0",
    "auditlens[openai]",
]
ui = ["streamlit>=1.28", "requests>=2.28", "auditlens[server]"]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "auditlens[openai]",
    "auditlens[pdf]",
    "auditlens[viz]",
    "auditlens[server]",
]
all = [
    "auditlens[openai]",
    "auditlens[pdf]",
    "auditlens[viz]",
    "auditlens[server]",
    "auditlens[ui]",
]

[tool.setuptools.packages.find]
where = ["src", "server", "ui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "server", "ui"]
