[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auditlens"
version = "0.1.0"
description = "Bias and fairness auditing for tabular ML datasets"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "AuditLens contributors" }]
dependencies = [
    "pandas>=1.5,<3.0",
    "numpy>=1.20,<3.0",
    "scipy>=1.7,<2.0",
    "scikit-learn>=1.0,<2.0",
    "pydantic>=2.0,<3.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
openai = [
    "langgraph>=0.2,<1.0",
    "langchain>=0.2,<1.0",
    "langchain-openai>=0.1,<1.0",
    "openai>=1.0,<2.0",
]
groq = [
    "langgraph>=0.2,<1.0",
    "langchain>=0.2,<1.0",
    "langchain-openai>=0.1,<1.0",
    "openai>=1.0,<2.0",
]
openrouter = [
    "langgraph>=0.2,<1.0",
    "langchain>=0.2,<1.0",
    "langchain-openai>=0.1,<1.0",
    "openai>=1.0,<2.0",
]
pdf = ["reportlab>=4.0,<5.0", "matplotlib>=3.5,<4.0"]
viz = ["matplotlib>=3.5,<4.0"]
server = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "python-multipart>=0.0.9,<1.0",
    "auditlens[openai]",
]
ui = ["streamlit>=1.28,<2.0", "requests>=2.28,<3.0", "auditlens[server]"]
dev = [
    "pytest>=8.0,<9.0",
    "httpx>=0.27,<1.0",
    "auditlens[openai]",
    "auditlens[pdf]",
    "auditlens[viz]",
    "auditlens[server]",
]
all = [
    "auditlens[openai]",
    "auditlens[pdf]",
    "auditlens[viz]",
    "auditlens[server]",
    "auditlens[ui]",
]

[tool.setuptools.packages.find]
where = ["src", "server", "ui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "server", "ui"]
